Implemented helper for tests to extend.
Signed-off-by: Paulo Pires <pjpires@gmail.com>